# fishAI

./: .gitignore  CMakeLists.txt  README.md  consolemessagecombiner.cpp  consolemessagecombiner.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  terminalwidget.cpp  terminalwidget.h
